--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@common/components": "workspace:*",
+    "@linkgraph/site-info": "*",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
