--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@common/components",
+  "name": "@linkgraph/components",
   "packageManager": "yarn@3.5.1",
   "main": "src/index.ts",
   "devDependencies": {
