--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node ./prisma/seed.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@linkgraph/site-info": "*",
+    "@prisma/client": "^4.14.1",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -20,5 +23,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.14.1"
   }
 }
