--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@linkgraph/site-info": "*",
+    "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
