--- a/apps/auth-practice/package.json
+++ b/apps/auth-practice/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "next": "13.4.3",
+    "clsx": "^1.2.1",
+    "next": "^13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
