--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "limiter": "^2.1.0",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
