feat: prisma 분리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "baseUrl": ".",
     "strict": true,
     "module": "esnext",
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "noEmit": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node"
   }
 }
