--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@linkgraph/db": "workspace:^",
+    "@tremor/react": "^2.8.2",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -22,5 +24,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1"
   }
 }
