chore: frontend 폴더에서 prisma 담당하는 부분 삭제

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -23,6 +23,13 @@
       "~/*": ["./app/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prisma/seed.js", "prisma/data.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "prisma/seed.js",
+    "../../packages/db/prisma/data.js"
+  ],
   "exclude": ["node_modules"]
 }
