chore: remove prisma

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -23,13 +23,6 @@
       "~/*": ["./app/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "prisma/seed.js",
-    "../../packages/db/prisma/data.js"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
