--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "limiter": "^2.1.0",
-    "next": "13.4.2",
+    "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -28,6 +28,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
     "prisma": "^4.14.1"
   }
 }
