chore: add createdAt, updatedAt to User Model

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,9 +4,9 @@
   "main": "./src/index.ts",
   "type": "module",
   "devDependencies": {
-    "prisma": "^4.14.1"
+    "prisma": "latest"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1"
+    "@prisma/client": "latest"
   }
 }
