--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,10 +3,13 @@
   "packageManager": "yarn@3.5.1",
   "main": "./src/index.ts",
   "type": "module",
+  "scripts": {
+    "postinstall": "prisma generate"
+  },
   "devDependencies": {
-    "prisma": "^4.14.1"
+    "prisma": "latest"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1"
+    "@prisma/client": "latest"
   }
 }
