--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "admin": "yarn workspace @linkgraph/admin",
     "docs": "yarn workspace @linkgraph/docs",
     "d3": "yarn workspace @linkgraph/d3",
+    "db": "yarn workspace @linkgraph/db",
     "frontend": "yarn workspace @linkgraph/frontend",
     "lint": "eslint ./packages --ext .ts,.tsx,.js,.jsx",
     "postinstall": "husky install"
