--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.342.0",
     "@aws-sdk/s3-request-presigner": "^3.342.0",
     "@aws-sdk/signature-v4-crt": "^3.342.0",
+    "@heroicons/react": "^2.0.18",
     "@linkgraph/site-info": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
