--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
