--- a/apps/admin-practice/package.json
+++ b/apps/admin-practice/package.json
@@ -13,10 +13,16 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.12.16",
+    "ky": "^0.33.3",
+    "ky-universal": "^0.11.0",
     "next": "13.4.6",
     "postcss": "8.4.24",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
