--- a/apps/admin-practice/package.json
+++ b/apps/admin-practice/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.12.16",
     "ky": "^0.33.3",
     "ky-universal": "^0.11.0",
+    "lucide-react": "^0.244.0",
     "next": "13.4.6",
     "postcss": "8.4.24",
     "qs": "^6.11.2",
