--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,13 +13,15 @@
     "@heroicons/react": "^2.0.18",
     "@linkgraph/db": "workspace:^",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@tanstack/react-query": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.14",
     "@tremor/react": "^2.8.2",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
-    "next": "13.4.2",
+    "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
