--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.4",
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
+    "lucide-react": "^0.244.0",
     "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
