--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,7 +18,7 @@
     "@linkgraph/site-info": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
-    "@tanstack/react-query": "^4.29.13",
+    "@tanstack/react-query": "^4.29.14",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -26,7 +26,7 @@
     "aws-crt": "^1.15.17",
     "d3": "^7.8.5",
     "limiter": "^2.1.0",
-    "next": "13.4.4",
+    "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.23",
