--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,27 +15,38 @@
     "@aws-sdk/s3-request-presigner": "^3.342.0",
     "@aws-sdk/signature-v4-crt": "^3.342.0",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.1.1",
     "@linkgraph/site-info": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
-    "@tanstack/react-query": "^4.29.13",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@tanstack/react-query": "^4.29.14",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "aws-crt": "^1.15.17",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "d3": "^7.8.5",
     "limiter": "^2.1.0",
-    "next": "13.4.4",
+    "lucide-react": "^0.244.0",
+    "next": "^13.4.6",
     "next-auth": "^4.22.1",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "recoil": "^0.7.7",
     "swagger-ui-react": "^4.19.0",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
