--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "declaration": true,
     "plugins": [
       {
         "name": "next"
