--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,8 +37,8 @@
     "next-auth": "^4.22.1",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "recoil": "^0.7.7",
     "swagger-ui-react": "^4.19.0",
