--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@linkgraph/db",
   "packageManager": "yarn@3.5.1",
+  "version": "0.0.1",
   "main": "./src/index.ts",
   "type": "module",
   "scripts": {
