chore: update prisma version

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,7 +8,7 @@
     "postinstall": "prisma generate"
   },
   "devDependencies": {
-    "prisma": "latest"
+    "prisma": "^4.16.2"
   },
   "dependencies": {
     "@prisma/client": "latest"
