--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@linkgraph/admin",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
-    "@linkgraph/db": "workspace:^",
+    "@linkgraph/db": "*",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
