--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@linkgraph/service",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,7 +15,7 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
-    "@linkgraph/db": "workspace:^",
+    "@linkgraph/db": "*",
     "@linkgraph/site-info": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
