--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@linkgraph/db",
   "packageManager": "yarn@3.5.1",
+  "version": "0.1.0",
+  "private": true,
   "main": "./src/index.ts",
   "type": "module",
   "scripts": {
