--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,4 @@
 nmMode: hardlinks-local
-
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+# plugins:
+#   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+#     spec: "@yarnpkg/plugin-workspace-tools"
