--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,9 +16,6 @@
     "@tanstack/react-query": "^4.29.14",
     "@tanstack/react-query-devtools": "^4.29.14",
     "@tremor/react": "^2.8.2",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "lucide-react": "^0.244.0",
@@ -32,6 +29,9 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1"
+    "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
+    "@types/node": "20.1.4",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6"
   }
 }
