--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -41,6 +41,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
