--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@linkgraph/db": "*",
     "@linkgraph/site-info": "*",
+    "@linkgraph/utils": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-label": "^2.0.2",
