--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -39,6 +39,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
