--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.1.1",
     "@linkgraph/db": "*",
     "@linkgraph/site-info": "*",
+    "@linkgraph/utils": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.1",
     "@radix-ui/react-label": "^2.0.2",
@@ -38,9 +39,11 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
