--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -23,7 +23,8 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.13.2",
+    "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
