--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -28,5 +28,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "supabase": "^1.77.9"
   }
 }
