--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -19,6 +19,7 @@
     "@linkgraph/site-info": "*",
     "@linkgraph/utils": "*",
     "@next-auth/prisma-adapter": "^1.0.6",
+    "@next/bundle-analyzer": "^13.4.12",
     "@prisma/client": "^4.14.1",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-devtools": "^4.29.19",
@@ -32,7 +33,7 @@
     "d3": "^7.8.5",
     "limiter": "^2.1.0",
     "lucide-react": "^0.244.0",
-    "next": "^13.4.10",
+    "next": "^13.4.12",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
