--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -28,6 +28,7 @@
     "postcss": "8.4.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "stripe": "^12.13.0",
     "tailwind-merge": "^1.14.0",
