--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.260.0",
     "next": "^13.4.12",
     "postcss": "8.4.26",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
