--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-helpers-react": "^0.4.1",
     "@supabase/auth-ui-react": "^0.4.2",
     "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.31.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
