--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -32,8 +32,8 @@
     "clsx": "^1.2.1",
     "d3": "^7.8.5",
     "limiter": "^2.1.0",
-    "lucide-react": "^0.244.0",
-    "next": "^13.4.12",
+    "lucide-react": "^0.263.1",
+    "next": "canary",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
