--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -33,7 +33,7 @@
     "d3": "^7.8.5",
     "limiter": "^2.1.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.4.12",
+    "next": "canary",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
