--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.7.3",
     "@supabase/auth-helpers-react": "^0.4.1",
@@ -39,6 +40,7 @@
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "uniqid": "^5.4.0",
+    "use-sound": "^4.0.1",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
