--- a/apps/practice/package.json
+++ b/apps/practice/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "stripe": "^12.13.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
