--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "yarn playwright test"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.342.0",
@@ -50,6 +51,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.2",
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
     "@types/d3": "^7.4.0",
     "@types/swagger-ui-react": "^4.18.0",
