--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -48,7 +48,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.0.4",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.36.2",
