--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -19,7 +19,7 @@
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "lucide-react": "^0.265.0",
-    "next": "13.4.12",
+    "next": "^13.4.19",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
