--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "strict": true,
     "declarationMap": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
