--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "strict": true,
     "declarationMap": true,
-    "forceConsistentCasingInFileNames": false,
+    "forceConsistentCasingInFileNames": false, // 이거 끄면 폴더 대소문자 구분 안함
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
