--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@hyunjin/hooks": "^0.0.13",
     "@linkgraph/db": "*",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^4.29.14",
