--- a/apps/compound/package.json
+++ b/apps/compound/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@hyunjin/hooks": "^0.0.16",
+    "@hyunjin/hooks": "^0.0.17",
+    "emotion-normalize": "^11.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
