--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -33,6 +33,8 @@
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
     "@types/node": "20.1.4",
     "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6"
+    "@types/react-dom": "^18.2.6",
+    "msw": "^1.3.1",
+    "whatwg-fetch": "^3.6.19"
   }
 }
