fix: build errors

--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -16,7 +16,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.1.1",
-    "@hyunjin/hooks": "^0.0.6",
+    "@hyunjin/hooks": "^1.1.2",
     "@linkgraph/db": "*",
     "@linkgraph/site-info": "*",
     "@linkgraph/utils": "*",
@@ -24,8 +24,10 @@
     "@next/bundle-analyzer": "^13.4.12",
     "@prisma/client": "^4.14.1",
     "@tanstack/react-query": "^4.32.0",
-    "@tanstack/react-query-devtools": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.14",
     "@types/node": "20.1.4",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "autoprefixer": "10.4.14",
     "aws-crt": "^1.15.17",
     "class-variance-authority": "^0.6.0",
@@ -33,7 +35,7 @@
     "d3": "^7.8.5",
     "limiter": "^2.1.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.5.6",
+    "next": "^14.1.0",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
@@ -53,8 +55,6 @@
     "@playwright/test": "^1.36.2",
     "@prisma/nextjs-monorepo-workaround-plugin": "^4.14.1",
     "@types/d3": "^7.4.0",
-    "prisma": "^4.14.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4"
+    "prisma": "^4.14.1"
   }
 }
