--- a/apps/service/tsconfig.json
+++ b/apps/service/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       "~/*": ["src/*"]
     },
-    "baseUrl": "."
+    "baseUrl": ".",
+    "noImplicitAny": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
